src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap
---
source: src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Test\"), EntityId(42)]).sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where (exists (select true from components c2 where c2.entity = components.entity and c2.component = :1) and entity = :2)",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
    ],
}
