src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@WithoutComponent("ecsdb::Test").sql_query().snap
---
source: src/query/ir.rs
description: "WithoutComponent(\"ecsdb::Test\").sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where not exists (select true from components c2 where c2.entity = components.entity and c2.component = ?1)",
    placeholders: [
        (
            "?1",
            Text(
                "ecsdb::Test",
            ),
        ),
    ],
}
