src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([And([EntityId(42), WithComponent("ecsdb::Test")]), And([EntityId(23), WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")])]).where_clause().snap
---
source: src/query/ir.rs
description: "And([And([EntityId(42), WithComponent(\"ecsdb::Test\")]), And([EntityId(23), WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")])]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "((entity = :1 and exists (select true from components c2 where c2.entity = components.entity and c2.component = :2)) and (entity = :3 and exists (select true from components c2 where c2.entity = components.entity and c2.component = :4) and not exists (select true from components c2 where c2.entity = components.entity and c2.component = :5)))",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
        (
            ":3",
            <dyn ToSql>,
        ),
        (
            ":4",
            <dyn ToSql>,
        ),
        (
            ":5",
            <dyn ToSql>,
        ),
    ],
}
