src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).where_clause().snap
---
source: src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "(exists (select true from components c2 where c2.entity = components.entity and c2.component = :1) and not exists (select true from components c2 where c2.entity = components.entity and c2.component = :2))",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
    ],
}
